<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2022 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string translatable="false" name="app_name">Geospatial Audio AR</string>
  <string translatable="false" name="button_text_set_anchor">ANCHOR SETTING</string>

  <string translatable="false" name="button_text_show_credits">CREDITS</string>
  <string translatable="false" name="switch_render_streetscaope_geometry">SHOW GEOMETRY</string>
  <string translatable="false" name="button_text_clear_anchors">CLEAR ALL ANCHORS</string>
  <string translatable="false" name="tap_screen_text">TAP ON SCREEN TO CREATE ANCHOR</string>
  <string translatable="false" name="status_unsupported">This device is not supported.</string>
  <string translatable="false" name="status_pretracking">Localizing your device to set anchor.</string>
  <string translatable="false" name="status_earth_state_error">There was an error state error, check that you have a valid authentication for the ARCore API.</string>
  <string translatable="false" name="status_localize_hint">Point your camera at buildings, stores, and signs near you.</string>
  <string translatable="false" name="status_localize_timeout">Localization not possible.\nClose and open the app to restart session.</string>
  <string translatable="false" name="status_localize_complete">Localization complete.</string>
  <string translatable="false" name="status_terrain_anchor">Terrain anchor state: %1$s</string>
  <string translatable="false" name="status_rooftop_anchor">Rooftop anchor state: %1$s</string>
  <string translatable="false" name="terrain_anchor_no_result_yet">Still resolving the terrain anchor. Please make sure you\'re in an area that has VPS coverage.</string>
  <string translatable="false" name="terrain_anchor_resource_exhausted">Too many terrain anchors have already been held. Clear all anchors to create new ones.</string>
  <plurals name="status_anchors_set">
    <item quantity="one">%d / %d Anchor set</item>
    <item quantity="other">%d / %d Anchors set</item>
  </plurals>
  <plurals name="status_anchors_cleared">
    <item quantity="one">%d Anchor cleared</item>
    <item quantity="other">%d Anchors cleared</item>
  </plurals>
  <string translatable="false" name="geospatial_pose_not_tracking">GEOSPATIAL POSE: Not tracking</string>

  <string translatable="false" name="geospatial_pose">LAT/LNG: %.6f, %.6f\nACC: %.2fm\nALT: %.2fm\nV.ACC: %.2fm\nANGLE: %.2f\nDEV AZI: %.2f\nYAW ACC: %.2f</string>

  <string translatable="false" name="geospatial_volume">VOLUME: %.2f</string>

  <!-- Strings used in privacy notice dialog messages. [CHAR_LIMIT=NONE] -->
  <string  name="share_experience_title">AR in the real world</string>
  <!-- Privacy notice message. [CHAR_LIMIT=NONE] -->
  <string name="share_experience_message">To power this session, Google will process visual data from your camera.</string>
  <!-- Privacy notice accept. [CHAR_LIMIT=NONE] -->
  <string name="agree_to_share">Get started</string>
  <!-- Privacy notice learn more. [CHAR_LIMIT=NONE] -->
  <string name="learn_more">Learn more</string>
  <!-- Geospatial privacy website. [CHAR_LIMIT=NONE] -->
  <string translatable="false" name="learn_more_url">https://developers.google.com/ar/data-privacy</string>

  <!-- Strings used in VPS unavailable notice dialog messages. [CHAR_LIMIT=NONE] -->
  <string  name="vps_unavailable_title">VPS not available</string>
  <!-- VPS unavailable notice message. [CHAR_LIMIT=NONE] -->
  <string name="vps_unavailable_message">Your current location does not have VPS coverage. Your session will be using your GPS signal only if VPS is not available.</string>
  <!-- VPS unavailable notice continue. [CHAR_LIMIT=NONE] -->
  <string name="continue_button">Continue</string>
</resources>
