<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2022 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.ar.core.examples.java.geospatial.GeospatialActivity">

    <android.opengl.GLSurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top" />

    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="#bf323232"
        android:padding="20dp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/geospatial_pose_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="#bf323232"
        android:padding="20dp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/geospatial_volume"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/geospatial_pose_view"
        android:layout_gravity="top"
        android:background="#bf323232"
        android:paddingStart="20dp"
        android:textColor="#ffffff"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tap_screen_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/status_text_view"
        android:layout_centerInParent="true"
        android:text="@string/tap_screen_text"
        android:textColor="#ffffff"
        android:visibility="gone" />

    <Button
        android:id="@+id/set_anchor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/streetscape_geometry_switch"
        android:layout_alignParentRight="true"
        android:drawableRight="@drawable/ic_settings_white"
        android:text="@string/button_text_set_anchor"
        android:visibility="invisible" />

    <Button
        android:id="@+id/show_credits_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/set_anchor_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="66dp"
        android:text="@string/button_text_show_credits" />

    <Switch
        android:id="@+id/streetscape_geometry_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:text="@string/switch_render_streetscaope_geometry"
        android:textOff="Off"
        android:textOn="On" />

    <TextView
        android:id="@+id/azimuthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="169dp"/>


    <TextView
        android:id="@+id/azimuthTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="201dp"
        android:layout_marginBottom="169dp" />

    <Button
        android:id="@+id/clear_anchors_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_text_clear_anchors"
        android:visibility="invisible" />

<!--    <Button-->
<!--        android:id="@+id/enter_point_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentLeft="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginBottom="70dp"-->
<!--        android:text="座標の入力" />-->

</RelativeLayout>
